# envful

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  install.sh  package-lock.json  package.json
.cargo/: config
.github/workflows/: build.yml  test.yml
fixtures/: .env  envful.json
npm/: binary.js  getBinary.js  install.js  run.js  uninstall.js
src/: checker.rs  lib.rs  main.rs  runner.rs
tests/: check_spec.rs  integration.rs  run_spec.rs
tests/fixtures/: .env  envful.json
tests/fixtures/malformed/: .env
tests/fixtures/missing/: .env  .env.example
tests/fixtures/missing_but_in_env/: .env  .env.example
tests/fixtures/missing_value/: .env
tests/fixtures/optional_missing/: .env  .env.example
tests/fixtures/success/: .env
tests/fixtures/two_optional/: .env  .env.example
tests/fixtures/undeclared/: .env  .env.example
