[package]
name = "envful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
colored = "2"
clap = { version = "3.0.10", features = ["derive"] }

[lib]
name = "envful"
path = "src/lib.rs"

[[bin]]
name = "envful"
path = "src/main.rs"