[package]
name = "envful"
version = "0.2.0"
edition = "2021"
authors = ["Alex Vilchis <alex@quentli.com>"]
license = "MIT"
description = "A tool to check env vars are present"
readme = "README.md"
# homepage = "https://github.com/you/grrs"
# repository = "https://github.com/you/grrs"
keywords = ["cli", "env", "envful"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
colored = "2"
clap = { version = "3.0.10", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[lib]
name = "envful"
path = "src/lib.rs"

[[bin]]
name = "envful"
path = "src/main.rs"