[package]
name = "envful"
version = "0.4.14"
edition = "2021"
authors = ["Alex Vilchis <alex@quentli.com>"]
license = "MIT"
description = "A tool to verify the presence of environment variables before running a process"
readme = "README.md"
homepage = "https://github.com/arvindell/envful"
repository = "https://github.com/arvindell/envful"
documentation = "https://github.com/arvindell/envful"
keywords = ["cli", "env", "envful"]
categories = ["command-line-utilities"]

[dependencies]
colored = "2"
clap = { version = "3.0.10", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[lib]
name = "envful"
path = "src/lib.rs"

[[bin]]
name = "envful"
path = "src/main.rs"